fix: add missing color to format info

--- a/src/styles/format-info.css
+++ b/src/styles/format-info.css
@@ -1,4 +1,5 @@
 .layer {
+  color: var(--text-primary);
   height: 100vh;
   width: 100vw;
   position: fixed;
